<resources>
    <string name="app_name">Jurusan</string>
    <string name="title_home">Home</string>
    <string name="title_academic">Akademik</string>
    <string name="title_association">Himpunan</string>
    <string name="title_mail">Persuratan</string>
    <string name="title_profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hai_user">Hai, Desi Musfiroh</string>
    <string name="title_notification">Notification</string>
    <string name="title_news">Berita</string>
    <string name="view_news">Lihat Semua</string>
    <string name="title_announcement">Pengumuman</string>
    <string name="view_announcement">Lihat Semua</string>
    <string name="snippet_announcement">Cuplikan Pengumuman</string>
    <string name="app_name_long">Sistem \nLayanan \nJurusan</string>
    <string name="jurusan">Teknik Elektro dan Informatika</string>
    <string name="welcome">Selamat Datang !</string>
    <string name="desc_login">Silahkan masukkan Username dan Password akun Siakad anda untuk login !</string>
    <string name="login">Login</string>
    <string name="fakultas">Fakultas Sains dan Teknologi</string>
    <string name="universitas">Universitas Jambi</string>
    <string name="year">2022</string>
    <string name="student_name">Nama Mahasiswa</string>
    <string name="major_name">Nama Jurusan</string>
    <string name="generation">2018</string>
</resources>