<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_mahasiswa"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.layanan.jurusan.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_academic"
        android:name="com.layanan.jurusan.ui.academic.AcademicFragment"
        android:label="@string/title_academic"
        tools:layout="@layout/fragment_academic" />

    <fragment
        android:id="@+id/navigation_association"
        android:name="com.layanan.jurusan.ui.association.AssociationFragment"
        android:label="@string/title_association"
        tools:layout="@layout/fragment_academic" />

    <fragment
        android:id="@+id/navigation_mail"
        android:name="com.layanan.jurusan.ui.mail.MailFragment"
        android:label="@string/title_mail"
        tools:layout="@layout/fragment_mail" />

</navigation>